@@ -1,3 +1,10 @@
+Sat Jul 10 20:03:48 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
+
+	* Makefile.in ({|dist-|real-}clean-ext): fixes syntax 
+	  for /bin/sh on Solaris
+
+	* tool/rmdirs: ditto
+
 Thu Jul  8 15:47:34 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
         * string.c (rb_str_conv_enc_opts): fix infinite loop because
